Edit deliveries and transactions